Added more icons and allowed selection or deletion of saved configs in the gui